@@ -2,6 +2,7 @@
    8-Mar-2020  - V0.10 Created module
   15-Mar-2020  - V0.11 Preliminary testing pipeline created
   16-Mar-2020  - V0.12 Preliminary deployment
+  18-Mar-2020  - V0.13 Update deployment scripts
 
 
 
